<resources>
    <string name="app_name">Gotchu</string>
    <string name="title_welcome">Welcome to Gotchu</string>
    <string name="subtitle_initialScreen">Find the right people for any occasion</string>
    <string name="logIn">Log In</string>
    <string name="interests">Interests</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="must_be_at_least_6_characters">at least 6 characters</string>
    <string name="health_and_fitness">Health and Fitness</string>
    <string name="arts_and_culture">Arts and culture</string>
    <string name="finish">Finish</string>
    <string name="choose_categories_that_interest_you">Choose categories that interest you</string>
    <string name="fashion_and_beauty">Fashion and Beauty</string>
    <string name="hobbies">Hobbies</string>
    <string name="business_and_career">Business And Career</string>
    <string name="search_a_group_to_join">Search a group to join</string>
    <string name="categories">Categories</string>
    <string name="tech">Tech</string>
    <string name="choose_a_category_from_below">Choose a category from below</string>
    <string name="complete_the_details_below">Complete the details below</string>
    <string name="name_of_group">Name of group</string>
    <string name="group_size">Group size</string>
    <string-array name="group_sizes">
        <item>Small (2–4 members)</item>
        <item>Medium (4–6 members)</item>
        <item>Big (6+ members)</item>
    </string-array>
    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
</resources>