<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F5F5F5"
    android:id="@+id/exploreMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreMain">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/top_bar_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exploreMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jaldi_bold"
        android:text="Explore"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#F6B6B6B6"
        android:iconifiedByDefault="false"
        android:padding="5dp"
        android:queryBackground="@android:color/transparent"
        android:queryHint="Search a group to join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exploreMainTitle" />

    <TextView
        android:id="@+id/categoriesTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/jaldi_bold"
        android:text="@string/categories"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:alpha="0.5"
                android:background="@drawable/rounded_shape"
                android:fontFamily="@font/jaldi_bold"
                android:onClick="categorySelected"
                android:text="@string/fashion_and_beauty"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/button_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:alpha="0.5"
                android:background="@drawable/rounded_shape_red"
                android:fontFamily="@font/jaldi_bold"
                android:onClick="categorySelected"
                android:text="@string/business_and_career"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_2" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_marginRight="8dp"
                android:alpha="0.5"
                android:background="@drawable/rounded_shape_purple"
                android:fontFamily="@font/jaldi_bold"
                android:onClick="categorySelected"
                android:text="@string/hobbies"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginRight="8dp"
                android:alpha="0.5"
                android:background="@drawable/rounded_shape_red"
                android:fontFamily="@font/jaldi_bold"
                android:onClick="categorySelected"
                android:text="@string/health_and_fitness"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/button_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_3" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginRight="8dp"
                android:alpha="0.5"
                android:background="@drawable/rounded_shape"
                android:fontFamily="@font/jaldi_bold"
                android:onClick="categorySelected"
                android:text="@string/arts_and_culture"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_4" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginRight="4dp"
                android:alpha=".5"
                android:background="@drawable/rounded_shape_purple"
                android:fontFamily="@font/jaldi_bold"
                android:onClick="categorySelected"
                android:text="@string/tech"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/button_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_1" />


        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <Button
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_grid"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            tools:layout_editor_absoluteX="-18dp" />

        <Button
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_grid"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            tools:layout_editor_absoluteX="-18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/groupsMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToGroupsMenu"
                android:src="@drawable/unselected_groups_menu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/exploreMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selected_explore_menu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/messagesMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToMessagesMenu"
                android:src="@drawable/unselected_messages_menu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/moreMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToMoreMenu"
                android:src="@drawable/unselected_more_menu" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>